# xdao

./: .gitignore  README.md  pyproject.toml
src/: config.py  db.py  main.py
src/app/user/: routes.py
src/application/: user_service.py
src/application/api/user/: routes.py
src/domain/: __init__.py
src/domain/base/: entity.py
src/domain/cart/: entity.py  interfaces.py
src/domain/cart_item/: entity.py
src/domain/product/: entity.py  enums.py  interfaces.py
src/domain/user/: entity.py  interfaces.py  models.py  services.py
src/domain/user_auth/: interfaces.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: hasher.py  sa_user_dao.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/alchemy/: session.py
src/infrastructure/database/alchemy/dao/: user_dao.py
src/infrastructure/database/dao/: user_dao.py
src/infrastructure/database/indexes/: __init__.py
src/infrastructure/database/models/: user_model.py
src/infrastructure/database/redis/: client.py  indexes.py
src/infrastructure/database/redis/dao/: user_dao.py
src/infrastructure/database/redis/indexes/: __init__.py  user.py
src/infrastructure/database/sqla_persistence/: orm_registry.py
src/infrastructure/database/sqla_persistence/mappings/: __init__.py  user.py
src/infrastructure/schemas/: __init__.py  user.py
src/presentation/schemas/: __init__.py
src/utils/: indexes.py
