[project]
name = "xdao"
version = "0.1.0"
description = ""
authors = [
    {name = "dvodnenko",email = "thekovalskii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
