[project]
name = "xdao"
version = "0.1.0"
description = ""

authors = [
    {name = "dvodnenko",email = "thekovalskii@gmail.com"}
]

readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "phonenumbers (>=9.0.10,<10.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
